fix(website): Remove scrollbar styles

--- a/website/src/styles.scss
+++ b/website/src/styles.scss
@@ -39,28 +39,3 @@ a:hover {
     color: deeppink;
   }
 }
-
-// Scrollbar
-html {
-  --scrollbarBG: transparent;
-  --thumbBG: rgba(255, 20, 147, 0.7);
-}
-
-*::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-* {
-  scrollbar-width: thin;
-  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
-}
-
-*::-webkit-scrollbar-track {
-  background: var(--scrollbarBG);
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: var(--thumbBG);
-  border: 3px solid var(--scrollbarBG);
-}
